--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "helmet": "^4.6.0",
+    "nest": "^0.1.6",
     "nestjs-typeorm-paginate": "^2.5.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
