--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
+    "axios": "^0.23.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
+    "google-auth-library": "^7.10.1",
     "helmet": "^4.6.0",
     "nest": "^0.1.6",
     "nestjs-typeorm-paginate": "^2.5.3",
