--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s",
       "!**/*.module.ts",
+      "!**/*.query-builder.ts",
       "!**/common/**",
       "!**/main.ts"
     ],
